--- a/src/components/landingPage/LandingPage.css
+++ b/src/components/landingPage/LandingPage.css
@@ -1,4 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&display=swap');
+
 .LandinPage {
+     
      width: 100vw;
      padding-left: 4rem;
      padding-right: 4rem;
@@ -6,7 +10,13 @@
 }
 
 .LandinPage__title {
+     /* font-family:  'Roboto', sans-serif; */
+     font-family: 'Kanit', sans-serif;
      color :  #ff751a;
      text-align: left;
      
+}
+
+.hr{
+     box-shadow: 1px 1px 2px gray;
 }
