--- a/src/components/landingPage/container/Container.css
+++ b/src/components/landingPage/container/Container.css
@@ -5,3 +5,11 @@
 
 }     
 
+.CardContainer__bg-img {
+    width: 50%;
+    position: absolute;
+    z-index: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0.5;
+}
