--- a/src/components/purchusePage/Panel/Panel.css
+++ b/src/components/purchusePage/Panel/Panel.css
@@ -1,11 +1,13 @@
 
 .Panel {
      min-width: 260px;
-     width: 80%;
+     width: 85%;
      padding: 1rem;
      margin: auto;
      margin-bottom: 10px;
      box-shadow: 2px 2px 2px gray;
+     border-radius: 8px;
+     z-index: 12 !important;
 }
 
 .Panel__title {
@@ -14,10 +16,15 @@
 }
 
 .Panel__price {
+     margin: 7px 5px  !important;
      color :  #cc2900;
      text-align: left;
 }
 
 .Panel__btnGroup {
      margin: auto;
+}
+
+.Panel__button   {
+     margin: 1px !important;
 }
