--- a/src/container/App.css
+++ b/src/container/App.css
@@ -1,5 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap'); 
+/* font-family: 'Roboto', sans-serif; */
+
+
 .App {
+  font-family: 'Roboto', sans-serif;
   text-align: center;
-  background-color: #f5f5f0;
+  /* background-color: #f5f5f0; */
+  background-color: #ebebe0;
   overflow-x: hidden;
+  padding: p;
 }
